--- a/content/protocols/extract-DNA-kc-cells.html
+++ b/content/protocols/extract-DNA-kc-cells.html
@@ -5,39 +5,63 @@
 <div class="hrecipe">
 <h2 class="fn">Kc cells DNA extraction protocol</h2>
 
-<p class="summary">This protocol 
-Kc167 cells.</p>
+<p class="summary">This protocol is used to extract the genomic
+DNA of Kc167 cells. The weight of one haploid <i>Drosophila</i>
+genome is &sim; 0.32 pg so the approximate yield is
+<span class="yield">1 &mu;g per million cells</span> (assuming
+that half of the cells are in G1 and half of the cells in G2).</p>
+
+<p>Some parts of this protocol have been
+<span class="optimized">optimized</span> for speed.
 
 <h3>Material:</h3>
 <ul>
-<li>Extraction Buffer&#58;<hr/>
-&#91;0.8M guanidine thiocyanate, 5 mM CaCl<sub>2</sub>, 20 mM EDTA, 5&#37; Tween 20, 0.5&#37; Triton X-100, 50 mM HEPES, pH 5.3&#93;</li>
-<li>Proteinase K</li>
-<li>RNase A</li>
-<li>Chloroform</li>
-<li>Iso-propanol</li>
-<li>70&#37; ethanol</li>
+<li class="ingredient">Extraction buffer (see below)</li>
+<li class="ingredient">Proteinase K</li>
+<li class="ingredient">RNase A</li>
+<li class="ingredient">Chloroform</li>
+<li class="ingredient">Isopropanol</li>
+<li class="ingredient">70&#37; ethanol</li>
 </ul>
 
+<div class="out_part">
+<h4>Before you start</h4>
+Prepare the extraction buffer with the following composition.
+<ul>
+  <li class="ingredient">0.8 M guanidine thiocyanate</li>
+  <li class="ingredient">5 mM CaCl<sub>2</sub></li>
+  <li class="ingredient">20 mM EDTA</li>
+  <li class="ingredient">5&#37; Tween 20</li>
+  <li class="ingredient">0.5&#37; Triton X-100</li>
+  <li class="ingredient">50 mM HEPES pH 5.3</li>
+</ul>
+  We do not make it fresh and have not seen a decrease of yield
+  or DNA quality in a period of about 6 months.
+</div>
 
 <h3 class="instructions">Procedure:</h3>
 
 <ol>
-<li>1.5 mL Kc cells (per well) are cultured into a 6-well plate and grown till the appropriate density for genomic DNA extraction.</li>
-<li>Transfer 1.5mL Kc cells into a 1.5mL eppendorf and centrifuge at 2000 rpm for 3 minutes.<br/>
-&#42;Use more cells for extracting genomic DNA if cells are not condensed enough.</li>
-<li>Discard the supernatant after centrifugation. Resuspend cell pellet with 500 mL extraction buffer containing 200&#181;g of proteinase K and 10 &#181;g/mL RNase A.Vortex homogeneously and incubate the sample at 55&#x2103;C for 15 minutes.</li>
-<li>Add 600&#181;l chloroform, vortex homogeneously for creating an emulsion.</li>
-<li>Centrifuge the sample at maximum speed at 4&#x2103;C for 5 minutes.</li>
-<li>Transfer the supernatant into a new 1.5mL eppendorf (avoid taking any cell debris around the surface between the supernatant and chloroform) and add 350 mL iso-propanol<sup>&#42;</sup>. Vortex gently and centrifuge the sample at maximum speed at 4&#x2103;C for 5 minutes again.</hr>
-<sup>&#42;</sup>After adding iso-propanol, generally you are able to see the while suspension precipitated.</li>
-<li>Discard the supernatant and add 70&#37; ethanol into the eppendorf and vortex gently. Centrifuge the sample at maximum speed at 4&#x2103;C for 5 another minutes.</li>
-<li>Discard the supernatant. Do not dry DNA pellet more than 1 minute. Dissolve DNA pellet immediately in appropriate volume of distilled water.</li>
+  <li>Grow Kc cells in 1.5 mL in a 6-well plate to &sim; 1-2 million cells.</li>
+  <li>Transfer 1.5mL Kc cells into a <span class="optimized">1.5 mL Eppendorf</span>.</li>
+  <li>Centrifuge at <span class="optimized">2000 rpm for 3 minutes</span>.<br/>
+  <li>Resuspend cell pellet with 500 mL extraction buffer,</li>
+  <li>Add 200 &mu;g of proteinase K and 10 &mu;g/mL RNase A. Invert the tube 3-5 times. <b>Do not vortex</b>.</li>
+  <li>Incubate the sample at 55&deg;C for <span class="optimized">15 minutes</span>.</li>
+  <li>Add 600 &mu;L chloroform. Emulsify by shaking. <b>Do not vortex</b>.</li>
+  <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</li>
+  <li>Transfer the top phase into a new 1.5 mL Eppendorf.</li>
+  <li>Add 350 mL iso-propanol. Invert the tube 3-5 times. <b>Do not vortex</b></li>
+  <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</hr>
+  <li>Spill the supernatant and add 70&#37; ethanol. Invert the tube 3-5 times. <b>Do not vortex</b></li>
+  <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</li>
+  <li>Spill the supernatant. Do not let dry more than 1 minute.</li>
+  <li>Dissolve DNA pellet in appropriate volume of distilled water.</li>
 </ol>
 </div>
 
 <br/>
-- version 0.5 -
+- version 1.0 -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
