--- a/content/protocols/extract-DNA-kc-cells.html
+++ b/content/protocols/extract-DNA-kc-cells.html
@@ -1,4 +1,5 @@
 {% extends "lab.html" %}
+
 {% block body %}
 <br/>
 <br/>
@@ -17,8 +18,12 @@ that half of the cells are in G1 and half of the cells in G2).</p>
 <h3>Material:</h3>
 <ul>
 <li class="ingredient">Extraction buffer (see below)</li>
-<li class="ingredient">Proteinase K</li>
-<li class="ingredient">RNase A</li>
+<li class="ingredient">Proteinase K
+  (<span class="company">New England Biolabs</span>,
+  REF: <span class="product_reference">P8102S</span>)</li>
+<li class="ingredient">RNase A
+  (<span class="company">Sigma-Aldrich</span>,
+  REF: <span class="product_reference">R6513</span>)</li>
 <li class="ingredient">Chloroform</li>
 <li class="ingredient">Isopropanol</li>
 <li class="ingredient">70&#37; ethanol</li>
