--- a/content/protocols/extract-DNA-kc-cells.html
+++ b/content/protocols/extract-DNA-kc-cells.html
@@ -51,14 +51,14 @@ Prepare the extraction buffer with the following composition.
   <li>Transfer 1.5mL Kc cells into a <span class="optimized">1.5 mL Eppendorf</span>.</li>
   <li>Centrifuge at <span class="optimized">2000 rpm for 3 minutes</span>.<br/>
   <li>Resuspend cell pellet with 500 mL extraction buffer,</li>
-  <li>Add 200 &mu;g of proteinase K and 10 &mu;g/mL RNase A. Invert the tube 3-5 times. <b>Do not vortex</b>.</li>
+  <li>Add 200 &mu;g of proteinase K and 10 &mu;g/mL RNase A. Invert the tube 3-5 times. Do not vortex.</li>
   <li>Incubate the sample at 55&deg;C for <span class="optimized">15 minutes</span>.</li>
-  <li>Add 600 &mu;L chloroform. Emulsify by shaking. <b>Do not vortex</b>.</li>
+  <li>Add 600 &mu;L chloroform. Emulsify by shaking. Do not vortex.</li>
   <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</li>
   <li>Transfer the top phase into a new 1.5 mL Eppendorf.</li>
-  <li>Add 350 mL iso-propanol. Invert the tube 3-5 times. <b>Do not vortex</b></li>
+  <li>Add 350 mL iso-propanol. Invert the tube 3-5 times. Do not vortex</li>
   <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</hr>
-  <li>Spill the supernatant and add 70&#37; ethanol. Invert the tube 3-5 times. <b>Do not vortex</b></li>
+  <li>Spill the supernatant and add 70&#37; ethanol. Invert the tube 3-5 times. Do not vortex</li>
   <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</li>
   <li>Spill the supernatant. Do not let dry more than 1 minute.</li>
   <li>Dissolve DNA pellet in appropriate volume of distilled water.</li>
@@ -66,7 +66,8 @@ Prepare the extraction buffer with the following composition.
 </div>
 
 <br/>
-- version 1.0 -
+- version <span calss="version">1.0</span>,
+<abbr calss="pudate" title="2012-04-022">April 22 2012</abbr> -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
