--- a/content/protocols/extract-DNA-kc-cells.html
+++ b/content/protocols/extract-DNA-kc-cells.html
@@ -18,10 +18,10 @@ that half of the cells are in G1 and half of the cells in G2).</p>
 <h3>Material:</h3>
 <ul>
 <li class="ingredient">Extraction buffer (see below)</li>
-<li class="ingredient">Proteinase K
+<li class="ingredient">Proteinase K, 20 mg/mL stock
   (<span class="company">New England Biolabs</span>,
   REF: <span class="product_reference">P8102S</span>)</li>
-<li class="ingredient">RNase A
+<li class="ingredient">RNase A, 1 mg/mL stock
   (<span class="company">Sigma-Aldrich</span>,
   REF: <span class="product_reference">R6513</span>)</li>
 <li class="ingredient">Chloroform</li>
@@ -50,15 +50,15 @@ Prepare the extraction buffer with the following composition.
   <li>Grow Kc cells in 1.5 mL in a 6-well plate to &sim; 1-2 million cells.</li>
   <li>Transfer 1.5mL Kc cells into a <span class="optimized">1.5 mL Eppendorf</span>.</li>
   <li>Centrifuge at <span class="optimized">2000 rpm for 3 minutes</span>.<br/>
-  <li>Resuspend cell pellet with 500 mL extraction buffer,</li>
-  <li>Add 200 &mu;g of proteinase K and 10 &mu;g/mL RNase A. Invert the tube 3-5 times. Do not vortex.</li>
+  <li>Resuspend cell pellet with 500 &mu;L extraction buffer.</li>
+  <li>Add 10 &mu;L of proteinase K and 5 &mu;L RNase A. Invert the tube 3-5 times. Do not vortex.</li>
   <li>Incubate the sample at 55&deg;C for <span class="optimized">15 minutes</span>.</li>
   <li>Add 600 &mu;L chloroform. Emulsify by shaking. Do not vortex.</li>
   <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</li>
   <li>Transfer the top phase into a new 1.5 mL Eppendorf.</li>
-  <li>Add 350 mL iso-propanol. Invert the tube 3-5 times. Do not vortex</li>
+  <li>Add 350 &mu;L iso-propanol. Invert the tube 3-5 times. Do not vortex.</li>
   <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</hr>
-  <li>Spill the supernatant and add 70&#37; ethanol. Invert the tube 3-5 times. Do not vortex</li>
+  <li>Spill the supernatant and add 70&#37; ethanol. Invert the tube 3-5 times. Do not vortex.</li>
   <li>Centrifuge at maximum speed at 4&deg;C for <span class="optimized">5 minutes</span>.</li>
   <li>Spill the supernatant. Do not let dry more than 1 minute.</li>
   <li>Dissolve DNA pellet in appropriate volume of distilled water.</li>
@@ -67,7 +67,7 @@ Prepare the extraction buffer with the following composition.
 
 <br/>
 - version <span calss="version">1.0</span>,
-<abbr calss="pudate" title="2012-04-022">April 22 2012</abbr> -
+<abbr calss="pudate" title="2012-09-07">September 7 2012</abbr> -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
