--- a/content/protocols/extract-dna-kc-cells.html
+++ b/content/protocols/extract-dna-kc-cells.html
@@ -1,4 +1,4 @@
-{% extends "lab.html" %}
+{% extends "base.html" %}
 
 {% block body %}
 <br/>
@@ -13,7 +13,7 @@ genome is &sim; 0.32 pg so the approximate yield is
 that half of the cells are in G1 and half of the cells in G2).</p>
 
 <p>Some parts of this protocol have been
-<span class="optimized">optimized</span> for speed.
+<span class="optimized">optimized</span> for speed.</p>
 
 <h3>Material:</h3>
 <ul>
@@ -32,14 +32,14 @@ that half of the cells are in G1 and half of the cells in G2).</p>
 <div class="out_part">
 <h4>Before you start</h4>
 Prepare the extraction buffer with the following composition.
-<ul>
+<ol>
   <li class="ingredient">0.8 M guanidine thiocyanate</li>
   <li class="ingredient">5 mM CaCl<sub>2</sub></li>
   <li class="ingredient">20 mM EDTA</li>
   <li class="ingredient">5&#37; Tween 20</li>
   <li class="ingredient">0.5&#37; Triton X-100</li>
   <li class="ingredient">50 mM HEPES pH 5.3</li>
-</ul>
+</ol>
   We do not make it fresh and have not seen a decrease of yield
   or DNA quality in a period of about 6 months.
 </div>
@@ -63,7 +63,6 @@ Prepare the extraction buffer with the following composition.
   <li>Spill the supernatant. Do not let dry more than 1 minute.</li>
   <li>Dissolve DNA pellet in appropriate volume of distilled water.</li>
 </ol>
-</div>
 
 <br/>
 - version <span calss="version">1.0</span>,
